Combine FindLeafPathsByLength and FindMaxSumLeafPaths into FindLeafPaths